# AutoRAGent

./: .gitignore  Makefile  docker-compose.yml  readme.md
apps/backend/: Dockerfile  pyproject.toml
apps/backend/src/: api.py
apps/backend/src/agent/: agent.py  prompt.py  tools.py
apps/backend/src/core/: DBHandler.py  chunker.py  parser.py
apps/backend/src/services/: ragify.py
apps/backend/src/tests/: test_api.py
apps/backend/tests/: test_api_files.py  test_api_normal.py
apps/database/: Dockerfile
apps/database/data/: chroma.sqlite3
apps/frontend/: Dockerfile  app.py  pyproject.toml
